# K230_AI_Demo_Development_Process_Analysis

./: README.md
kmodel_related/kmodel_export/: README.md  build_model.sh  build_model_int16.sh
kmodel_related/kmodel_export/face_detection/: mobile_retinaface_data_100_640.py  mobile_retinaface_data_100_640_uint16_option_1.py  mobile_retinaface_data_100_640_uint16_option_2.py  mobile_retinaface_data_100_640_uint16_option_3.py  mobile_retinaface_data_100_640_uint16_option_4.py  mobile_retinaface_onnx_simu_640.py
kmodel_related/kmodel_export/face_recognition/: mobile_face.py  mobile_face_onnx_simu.py
kmodel_related/kmodel_export/k230_kmodel/: face_recognize.kmodel
kmodel_related/kmodel_inference/: CMakeLists.txt  README.md  build_app.sh
kmodel_related/kmodel_inference/face_detection/: ai_base.cc  face_detection.cc  face_detection.h  main.cc
kmodel_related/kmodel_inference/face_recognition/: CMakeLists.txt  face_detection.cc  face_recognition.cc  face_recognition.h  main.cc  utils.h
kmodel_related/kmodel_inference/main_nncase/: CMakeLists.txt  main_nncase.cc
kmodel_related/kmodel_inference/shell/: face_detect_main_nncase.sh  face_recognize_main_nncase.sh
kmodel_related/kmodel_inference/test_demo/: CMakeLists.txt
onnx_related/onnx_export/: README.md  face_recognition_convert_to_onnx.py  readme.txt
onnx_related/onnx_inference/: README.md
onnx_related/onnx_inference/face_detection/: anchor_640.txt  box_utils.py  data_augment.py  face_detector.py  prior_box.py
onnx_related/onnx_inference/face_recognition/: main_face_affine.py  main_face_recognition.py  (+1 more)
(+23 files in other folders)
